[metadata]
name = sre_yield
author = Alex Perry
author_email = alex.perry@google.com
license = Apache
description = Expands a regular expression to its possible matches
keywords =
url = https://github.com/google/sre_yield
long_description = file: README.rst
classifiers =
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent

[options]
packages = find:
install_requires =

[options.entry_points]
console_scripts = demo_sre_yield=sre_yield:main

[coverage:run]
branch = True
include = sre_yield/*
omit =
    sre_yield/tests/*
    sre_yield/testing_utils.py

[coverage:report]
fail_under = 94
precision = 1
show_missing = True
skip_covered = True

[isort]
line_length = 88
multi_line_output = 3
force_grid_wrap = False
include_trailing_comma = True
use_parentheses = True

[tox:tox]
envlist = py36, py37, py38, py38-minimal

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals = make
commands =
    make doctest
    make test
setenv =
    COVERAGE_FILE={envdir}/.coverage
    MYPY_CACHE_DIR={envdir}/.mypy_cache

[testenv:py38-minimal]
# This makes sure that thet the setup metadata has everything we need to run the
# cli.
deps=
commands =
    demo_sre_yield 'a|b'

[flake8]
ignore = E203, E231, E266, E302, E501, W503
max-line-length = 88
